--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <title>Document</title>
 </head>
 
-<body class="body">
+<body class="page">
   <header class="header">
     <img class="logo" alt="логотип" src="./images/Logo/__logo.svg">
     <div class="languages">
-      <p class="languages__link languages__link_active">RU</p>
-      <p class="languages__lang-link">EN</p>
+      <p class="languages__link languages__link_active">Ru</p>
+      <p class="languages__link">En</p>
     </div>
   </header>
   <main class="main">
@@ -34,11 +34,11 @@
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li class="list__item">Часовых поясов 11</li>
-        <li class="list__item">Объектов природного наследия ЮНЕСКО 12</li>
-        <li class="list__item">Объектов культурного наследия ЮНЕСКО 16</li>
-        <li class="list__item">Природных заповедников 105</li>
-        <li class="list__item">Аэропортов 241</li>
+        <li class="list__item">Часовых поясов <span class="item__value">11</span></li>
+        <li class="list__item">Объектов природного наследия ЮНЕСКО <span class="item__value">12</span></li>
+        <li class="list__item">Объектов культурного наследия ЮНЕСКО <span class="item__value">16</span></li>
+        <li class="list__item">Природных заповедников <span class="item__value">105</span></li>
+        <li class="list__item">Аэропортов <span class="item__value">241</span></li>
       </ul>
     </section>
     <section class="photo">
@@ -57,80 +57,102 @@
     </section>
     <section class="places">
       <div class="place">
-        <h2 class="place__title">Куршская коса</h2>
-        <img class="place__image" alt="Куршская коса" src="./images/places/Kurshskaya-kosa.jpg">
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="http://park-kosa.ru">park-kosa.ru</a>
+        <div class="place__column-one">
+          <h2 class="place__title">Куршская коса</h2>
+          <img class="place__image" alt="Куршская коса" src="./images/places/Kurshskaya-kosa.jpg">
         </div>
-        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-          спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
-          природная зона на краю российского анклава.</p>
-        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
-          исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
-          россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
-          запах стального, прохладного моря.</p>
+        <div class="place__column-two">
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a class="website__link" href="http://park-kosa.ru">park-kosa.ru</a>
+          </div>
+          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+            природная зона на краю российского анклава.</p>
+          <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+            исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+            россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
+            запах стального, прохладного моря.</p>
+        </div>
       </div>
       <div class="place">
-        <h2 class="place__title">Кольский</h2>
-        <img class="place__image" alt="Кольский" src="./images/places/Kolskij.jpg">
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
-            Geographic</a>
+        <div class="place__column-one">
+          <h2 class="place__title">Кольский</h2>
+          <img class="place__image" alt="Кольский" src="./images/places/Kolskij.jpg">
         </div>
-        <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
-          юг —
-          тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-        <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
-          Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
-          Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
-          накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-          в Мурманск.</p>
+        <div class="place__column-two">
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a class="website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
+              Geographic</a>
+          </div>
+          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
+            юг —
+            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+            Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
+            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
+            накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+            в Мурманск.</p>
+        </div>
       </div>
       <div class="place">
-        <h2 class="place__title">Алтай</h2>
-        <img class="place__image" alt="Алтай" src="./images/places/Altaj.jpg">
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+        <div class="place__column-one">
+          <h2 class="place__title">Алтай</h2>
+          <img class="place__image" alt="Алтай" src="./images/places/Altaj.jpg">
         </div>
-        <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-          В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-          озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
-          воздухом.</p>
-        <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
-          разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
-          пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+        <div class="place__column-two">
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a class="website__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+          </div>
+          <p class="place__paragraph">Алтай — одно из красивейших мест в России.
+            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+            озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+            воздухом.</p>
+          <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+            всё
+            разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+            пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
       </div>
       <div class="place">
-        <h2 class="place__title">Зимний Байкал</h2>
-        <img class="place__image" alt="Зимний Байкал" src="./images/places/Winter-Bajkal.jpg">
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+        <div class="place__column-one">
+          <h2 class="place__title">Зимний Байкал</h2>
+          <img class="place__image" alt="Зимний Байкал" src="./images/places/Winter-Bajkal.jpg">
         </div>
-        <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-          в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
-        </p>
-        <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
-          Это такой вид спорта, когда лыжник привязывает себя
-          к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
-          «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+        <div class="place__column-two">
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a class="website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+          </div>
+          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
+            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+          </p>
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            скийорингу.
+            Это такой вид спорта, когда лыжник привязывает себя
+            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+            «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+        </div>
       </div>
       <div class="place">
-        <h2 class="place__title">Карелия</h2>
-        <img class="place__image" alt="Карелия" src="./images/places/Kareliya.jpg">
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+        <div class="place__column-one">
+          <h2 class="place__title">Карелия</h2>
+          <img class="place__image" alt="Карелия" src="./images/places/Kareliya.jpg">
         </div>
-        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
-          лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-          национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
-          полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        <div class="place__column-two">
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a class="website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+          </div>
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        </div>
       </div>
     </section>
     <section class="cover">
@@ -142,11 +164,21 @@
   </main>
   <footer class="footer">
     <ul class="left-side">
-      <a href="https://yandex.ru/maps"><li class="left-side__item">Карты</li></a>
-      <a href="https://yandex.ru/pogoda"><li class="left-side__item">Погода</li></a>
-      <a href="https://rasp.yandex.ru"><li class="left-side__item">Расписание</li></a>
-      <a href="https://calendar.yandex.ru"><li class="left-side__item">Календарь</li></a>
-      <a href="https://travel.yandex.ru"><li class="left-side__item">Путешествия</li></a>
+      <a href="https://yandex.ru/maps">
+        <li class="left-side__item">Карты</li>
+      </a>
+      <a href="https://yandex.ru/pogoda">
+        <li class="left-side__item">Погода</li>
+      </a>
+      <a href="https://rasp.yandex.ru">
+        <li class="left-side__item">Расписание</li>
+      </a>
+      <a href="https://calendar.yandex.ru">
+        <li class="left-side__item">Календарь</li>
+      </a>
+      <a href="https://travel.yandex.ru">
+        <li class="left-side__item">Путешествия</li>
+      </a>
     </ul>
     <p class="right-side">© 2023. Абраменков Сергей</p>
   </footer>
