--- a/index.html
+++ b/index.html
@@ -57,15 +57,13 @@
     </section>
     <section class="places">
       <div class="place">
-        <div class="place__column-one">
-          <h2 class="place__title">Куршская коса</h2>
-          <img class="place__image" alt="Куршская коса" src="./images/places/Kurshskaya-kosa.jpg">
+        <h2 class="place__title">Куршская коса</h2>
+        <div class="website">
+          <p class="website__url-heading">URL</p>
+          <a class="website__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
-        <div class="place__column-two">
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a class="website__link" href="http://park-kosa.ru">park-kosa.ru</a>
-          </div>
+        <img class="place__image" alt="Куршская коса" src="./images/places/Kurshskaya-kosa.jpg">
+        <div class="place__paragraphs">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
@@ -76,16 +74,14 @@
         </div>
       </div>
       <div class="place">
-        <div class="place__column-one">
-          <h2 class="place__title">Кольский</h2>
-          <img class="place__image" alt="Кольский" src="./images/places/Kolskij.jpg">
+        <h2 class="place__title">Кольский</h2>
+        <div class="website">
+          <p class="website__url-heading">URL</p>
+          <a class="website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
+            Geographic</a>
         </div>
-        <div class="place__column-two">
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a class="website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
-              Geographic</a>
-          </div>
+        <img class="place__image" alt="Кольский" src="./images/places/Kolskij.jpg">
+        <div class="place__paragraphs">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
             юг —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -97,15 +93,13 @@
         </div>
       </div>
       <div class="place">
-        <div class="place__column-one">
-          <h2 class="place__title">Алтай</h2>
-          <img class="place__image" alt="Алтай" src="./images/places/Altaj.jpg">
+        <h2 class="place__title">Алтай</h2>
+        <div class="website">
+          <p class="website__url-heading">URL</p>
+          <a class="website__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
         </div>
-        <div class="place__column-two">
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a class="website__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
-          </div>
+        <img class="place__image" alt="Алтай" src="./images/places/Altaj.jpg">
+        <div class="place__paragraphs">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
             озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
@@ -117,15 +111,13 @@
         </div>
       </div>
       <div class="place">
-        <div class="place__column-one">
-          <h2 class="place__title">Зимний Байкал</h2>
-          <img class="place__image" alt="Зимний Байкал" src="./images/places/Winter-Bajkal.jpg">
+        <h2 class="place__title">Зимний Байкал</h2>
+        <div class="website">
+          <p class="website__url-heading">URL</p>
+          <a class="website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
-        <div class="place__column-two">
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a class="website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-          </div>
+        <img class="place__image" alt="Зимний Байкал" src="./images/places/Winter-Bajkal.jpg">
+        <div class="place__paragraphs">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
@@ -137,50 +129,46 @@
         </div>
       </div>
       <div class="place">
-        <div class="place__column-one">
-          <h2 class="place__title">Карелия</h2>
-          <img class="place__image" alt="Карелия" src="./images/places/Kareliya.jpg">
+        <h2 class="place__title">Карелия</h2>
+        <div class="website">
+          <p class="website__url-heading">URL</p>
+          <a class="website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
         </div>
-        <div class="place__column-two">
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a class="website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
-          </div>
-          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
-            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
-            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-        </div>
+        <img class="place__image" alt="Карелия" src="./images/places/Kareliya.jpg">
+        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+          лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+          национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+          полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
       </div>
     </section>
     <section class="cover">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay"></a>
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay"></a>
       <h2 class="cover__title">До Байкала «на собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
       </p>
     </section>
   </main>
   <footer class="footer">
-    <ul class="left-side">
+    <ul class="footer__links">
       <a href="https://yandex.ru/maps">
-        <li class="left-side__item">Карты</li>
+        <li class="links__item">Карты</li>
       </a>
       <a href="https://yandex.ru/pogoda">
-        <li class="left-side__item">Погода</li>
+        <li class="links__item">Погода</li>
       </a>
       <a href="https://rasp.yandex.ru">
-        <li class="left-side__item">Расписание</li>
+        <li class="links__item">Расписание</li>
       </a>
       <a href="https://calendar.yandex.ru">
-        <li class="left-side__item">Календарь</li>
+        <li class="links__item">Календарь</li>
       </a>
       <a href="https://travel.yandex.ru">
-        <li class="left-side__item">Путешествия</li>
+        <li class="links__item">Путешествия</li>
       </a>
     </ul>
-    <p class="right-side">© 2023. Абраменков Сергей</p>
+    <p class="footer__copyright">© 2023. Абраменков Сергей</p>
   </footer>
 </body>
 
