--- a/index.html
+++ b/index.html
@@ -144,28 +144,31 @@
       </div>
     </section>
     <section class="cover">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay"></a>
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
-      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
-      </p>
+      <div class="cover__background">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay"></a>
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.
+        </p>
+      </div>
     </section>
   </main>
   <footer class="footer">
     <ul class="footer__links">
-      <a href="https://yandex.ru/maps">
-        <li class="links__item">Карты</li>
+      <a class="footer__link" href="https://yandex.ru/maps">
+        <li class="link__item">Карты</li>
       </a>
-      <a href="https://yandex.ru/pogoda">
-        <li class="links__item">Погода</li>
+      <a class="footer__link" href="https://yandex.ru/pogoda">
+        <li class="link__item">Погода</li>
       </a>
-      <a href="https://rasp.yandex.ru">
-        <li class="links__item">Расписание</li>
+      <a class="footer__link" href="https://rasp.yandex.ru">
+        <li class="link__item">Расписание</li>
       </a>
-      <a href="https://calendar.yandex.ru">
-        <li class="links__item">Календарь</li>
+      <a class="footer__link" href="https://calendar.yandex.ru">
+        <li class="link__item">Календарь</li>
       </a>
-      <a href="https://travel.yandex.ru">
-        <li class="links__item">Путешествия</li>
+      <a class="footer__link" href="https://travel.yandex.ru">
+        <li class="link__item">Путешествия</li>
       </a>
     </ul>
     <p class="footer__copyright">© 2023. Абраменков Сергей</p>
