--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
         <li class="list__item">Аэропортов <span class="item__value">241</span></li>
       </ul>
     </section>
-    <section class="photo">
-      <img class="photo__item" alt="Вид из окна поезда" src="./images/photo/train.jpg">
-      <img class="photo__item" alt="Облака" src="./images/photo/clouds.jpg">
-      <img class="photo__item" alt="Рассвет" src="./images/photo/sunrise.jpg">
-      <img class="photo__item" alt="Горный туман" src="./images/photo/mountain-fog.jpg">
-      <img class="photo__item" alt="Автомобиль на льду" src="./images/photo/wheel.jpg">
-      <img class="photo__item" alt="Пляж" src="./images/photo/beach.jpg">
-      <img class="photo__item" alt="Горы" src="./images/photo/mountain.jpg">
-      <img class="photo__item" alt="Дорожный знак" src="./images/photo/road-sign.jpg">
-      <img class="photo__item" alt="Горы" src="./images/photo/mountains.jpg">
-      <img class="photo__item" alt="Гора" src="./images/photo/mountain-2.jpg">
-      <img class="photo__item" alt="Горный пик" src="./images/photo/mountain-peak.jpg">
-      <img class="photo__item" alt="Туман" src="./images/photo/fog.jpg">
-    </section>
+      <div class="photo-grid">
+        <img class="photo__item" alt="Вид из окна поезда" src="./images/photo/train.jpg">
+        <img class="photo__item" alt="Облака" src="./images/photo/clouds.jpg">
+        <img class="photo__item" alt="Рассвет" src="./images/photo/sunrise.jpg">
+        <img class="photo__item" alt="Горный туман" src="./images/photo/mountain-fog.jpg">
+        <img class="photo__item" alt="Автомобиль на льду" src="./images/photo/wheel.jpg">
+        <img class="photo__item" alt="Пляж" src="./images/photo/beach.jpg">
+        <img class="photo__item" alt="Горы" src="./images/photo/mountain.jpg">
+        <img class="photo__item" alt="Дорожный знак" src="./images/photo/road-sign.jpg">
+        <img class="photo__item" alt="Горы" src="./images/photo/mountains.jpg">
+        <img class="photo__item" alt="Гора" src="./images/photo/mountain-2.jpg">
+        <img class="photo__item" alt="Горный пик" src="./images/photo/mountain-peak.jpg">
+        <img class="photo__item" alt="Туман" src="./images/photo/fog.jpg">
+      </div>
     <section class="places">
       <div class="place">
         <h2 class="place__title">Куршская коса</h2>
@@ -155,21 +155,16 @@
   </main>
   <footer class="footer">
     <ul class="footer__links">
-      <a class="footer__link" href="https://yandex.ru/maps">
-        <li class="link__item">Карты</li>
-      </a>
-      <a class="footer__link" href="https://yandex.ru/pogoda">
-        <li class="link__item">Погода</li>
-      </a>
-      <a class="footer__link" href="https://rasp.yandex.ru">
-        <li class="link__item">Расписание</li>
-      </a>
-      <a class="footer__link" href="https://calendar.yandex.ru">
-        <li class="link__item">Календарь</li>
-      </a>
-      <a class="footer__link" href="https://travel.yandex.ru">
-        <li class="link__item">Путешествия</li>
-      </a>
+      <li class="link__item"><a class="footer__link" href="https://yandex.ru/maps">
+        Карты</a></li>
+      <li class="link__item"><a class="footer__link" href="https://yandex.ru/pogoda">
+        Погода</a></li>
+      <li class="link__item"><a class="footer__link" href="https://rasp.yandex.ru">
+        Расписание</a></li>
+      <li class="link__item"><a class="footer__link" href="https://calendar.yandex.ru">
+        Календарь</a></li>
+      <li class="link__item"><a class="footer__link" href="https://travel.yandex.ru">
+          Путешествия</a></li>
     </ul>
     <p class="footer__copyright">© 2023. Абраменков Сергей</p>
   </footer>
