--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-      <ul class="intro__list">
-        <li class="list__item">Часовых поясов <span class="item__value">11</span></li>
-        <li class="list__item">Объектов природного наследия ЮНЕСКО <span class="item__value">12</span></li>
-        <li class="list__item">Объектов культурного наследия ЮНЕСКО <span class="item__value">16</span></li>
-        <li class="list__item">Природных заповедников <span class="item__value">105</span></li>
-        <li class="list__item">Аэропортов <span class="item__value">241</span></li>
+      <ul class="list">
+        <li class="list__item">Часовых поясов <span class="list__value">11</span></li>
+        <li class="list__item">Объектов природного наследия ЮНЕСКО <span class="list__value">12</span></li>
+        <li class="list__item">Объектов культурного наследия ЮНЕСКО <span class="list__value">16</span></li>
+        <li class="list__item">Природных заповедников <span class="list__value">105</span></li>
+        <li class="list__item">Аэропортов <span class="list__value">241</span></li>
       </ul>
     </section>
       <div class="photo-grid">
