--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li class="list__item">Аэропортов <span class="list__value">241</span></li>
       </ul>
     </section>
-      <div class="photo-grid">
+      <div class="photo">
         <img class="photo__item" alt="Вид из окна поезда" src="./images/photo/train.jpg">
         <img class="photo__item" alt="Облака" src="./images/photo/clouds.jpg">
         <img class="photo__item" alt="Рассвет" src="./images/photo/sunrise.jpg">
@@ -154,16 +154,16 @@
     </section>
   </main>
   <footer class="footer">
-    <ul class="footer__links">
-      <li class="link__item"><a class="footer__link" href="https://yandex.ru/maps">
+    <ul class="footer__items">
+      <li class="footer__item"><a class="footer__item_link" href="https://yandex.ru/maps">
         Карты</a></li>
-      <li class="link__item"><a class="footer__link" href="https://yandex.ru/pogoda">
+      <li class="footer__item"><a class="footer__item_link" href="https://yandex.ru/pogoda">
         Погода</a></li>
-      <li class="link__item"><a class="footer__link" href="https://rasp.yandex.ru">
+      <li class="footer__item"><a class="footer__item_link" href="https://rasp.yandex.ru">
         Расписание</a></li>
-      <li class="link__item"><a class="footer__link" href="https://calendar.yandex.ru">
+      <li class="footer__item"><a class="footer__item_link" href="https://calendar.yandex.ru">
         Календарь</a></li>
-      <li class="link__item"><a class="footer__link" href="https://travel.yandex.ru">
+      <li class="footer__item"><a class="footer__item_link" href="https://travel.yandex.ru">
           Путешествия</a></li>
     </ul>
     <p class="footer__copyright">© 2023. Абраменков Сергей</p>
