--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
   </main>
   <footer class="footer">
     <ul class="footer__items">
-      <li class="footer__item"><a class="footer__item_link" href="https://yandex.ru/maps">
+      <li class="footer__item"><a href="https://yandex.ru/maps">
         Карты</a></li>
-      <li class="footer__item"><a class="footer__item_link" href="https://yandex.ru/pogoda">
+      <li class="footer__item"><a href="https://yandex.ru/pogoda">
         Погода</a></li>
-      <li class="footer__item"><a class="footer__item_link" href="https://rasp.yandex.ru">
+      <li class="footer__item"><a href="https://rasp.yandex.ru">
         Расписание</a></li>
-      <li class="footer__item"><a class="footer__item_link" href="https://calendar.yandex.ru">
+      <li class="footer__item"><a href="https://calendar.yandex.ru">
         Календарь</a></li>
-      <li class="footer__item"><a class="footer__item_link" href="https://travel.yandex.ru">
+      <li class="footer__item"><a href="https://travel.yandex.ru">
           Путешествия</a></li>
     </ul>
     <p class="footer__copyright">© 2023. Абраменков Сергей</p>
