--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Document</title>
 </head>
 
 <body class="page">
   <header class="header">
-    <img class="logo" alt="логотип" src="./images/Logo/__logo.svg">
-    <div class="languages">
-      <p class="languages__link languages__link_active">Ru</p>
-      <p class="languages__link">En</p>
+    <img class="logo" alt="логотип" src="./images/Logo/__logo.svg" width="176" height="52">
+    <div class="header__languages">
+      <a href="#" class="header__link header__link_active">Ru</a>
+      <a href="#" class="header__link">En</a>
     </div>
   </header>
   <main class="main">
@@ -33,34 +32,34 @@
         без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-      <ul class="list">
-        <li class="list__item">Часовых поясов <span class="list__value">11</span></li>
-        <li class="list__item">Объектов природного наследия ЮНЕСКО <span class="list__value">12</span></li>
-        <li class="list__item">Объектов культурного наследия ЮНЕСКО <span class="list__value">16</span></li>
-        <li class="list__item">Природных заповедников <span class="list__value">105</span></li>
-        <li class="list__item">Аэропортов <span class="list__value">241</span></li>
+      <ul class="intro__list">
+        <li class="intro__item">Часовых поясов <span class="intro__value">11</span></li>
+        <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__value">12</span></li>
+        <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__value">16</span></li>
+        <li class="intro__item">Природных заповедников <span class="intro__value">105</span></li>
+        <li class="intro__item">Аэропортов <span class="intro__value">241</span></li>
       </ul>
     </section>
-      <div class="photo">
-        <img class="photo__item" alt="Вид из окна поезда" src="./images/photo/train.jpg">
-        <img class="photo__item" alt="Облака" src="./images/photo/clouds.jpg">
-        <img class="photo__item" alt="Рассвет" src="./images/photo/sunrise.jpg">
-        <img class="photo__item" alt="Горный туман" src="./images/photo/mountain-fog.jpg">
-        <img class="photo__item" alt="Автомобиль на льду" src="./images/photo/wheel.jpg">
-        <img class="photo__item" alt="Пляж" src="./images/photo/beach.jpg">
-        <img class="photo__item" alt="Горы" src="./images/photo/mountain.jpg">
-        <img class="photo__item" alt="Дорожный знак" src="./images/photo/road-sign.jpg">
-        <img class="photo__item" alt="Горы" src="./images/photo/mountains.jpg">
-        <img class="photo__item" alt="Гора" src="./images/photo/mountain-2.jpg">
-        <img class="photo__item" alt="Горный пик" src="./images/photo/mountain-peak.jpg">
-        <img class="photo__item" alt="Туман" src="./images/photo/fog.jpg">
-      </div>
+    <section class="photo">
+      <img class="photo__item" alt="Вид из окна поезда" src="./images/photo/train.jpg">
+      <img class="photo__item" alt="Облака" src="./images/photo/clouds.jpg">
+      <img class="photo__item" alt="Рассвет" src="./images/photo/sunrise.jpg">
+      <img class="photo__item" alt="Горный туман" src="./images/photo/mountain-fog.jpg">
+      <img class="photo__item" alt="Автомобиль на льду" src="./images/photo/wheel.jpg">
+      <img class="photo__item" alt="Пляж" src="./images/photo/beach.jpg">
+      <img class="photo__item" alt="Горы" src="./images/photo/mountain.jpg">
+      <img class="photo__item" alt="Дорожный знак" src="./images/photo/road-sign.jpg">
+      <img class="photo__item" alt="Горы" src="./images/photo/mountains.jpg">
+      <img class="photo__item" alt="Гора" src="./images/photo/mountain-2.jpg">
+      <img class="photo__item" alt="Горный пик" src="./images/photo/mountain-peak.jpg">
+      <img class="photo__item" alt="Туман" src="./images/photo/fog.jpg">
+    </section>
     <section class="places">
       <div class="place">
         <h2 class="place__title">Куршская коса</h2>
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="http://park-kosa.ru">park-kosa.ru</a>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
         <img class="place__image" alt="Куршская коса" src="./images/places/Kurshskaya-kosa.jpg">
         <div class="place__paragraphs">
@@ -75,9 +74,9 @@
       </div>
       <div class="place">
         <h2 class="place__title">Кольский</h2>
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
             Geographic</a>
         </div>
         <img class="place__image" alt="Кольский" src="./images/places/Kolskij.jpg">
@@ -94,9 +93,9 @@
       </div>
       <div class="place">
         <h2 class="place__title">Алтай</h2>
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
         </div>
         <img class="place__image" alt="Алтай" src="./images/places/Altaj.jpg">
         <div class="place__paragraphs">
@@ -112,9 +111,9 @@
       </div>
       <div class="place">
         <h2 class="place__title">Зимний Байкал</h2>
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
         <img class="place__image" alt="Зимний Байкал" src="./images/places/Winter-Bajkal.jpg">
         <div class="place__paragraphs">
@@ -130,42 +129,43 @@
       </div>
       <div class="place">
         <h2 class="place__title">Карелия</h2>
-        <div class="website">
-          <p class="website__url-heading">URL</p>
-          <a class="website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
         </div>
         <img class="place__image" alt="Карелия" src="./images/places/Kareliya.jpg">
-        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
-          лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-          национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
-          полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        <div class="place__paragraphs">
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        </div>
       </div>
     </section>
     <section class="cover">
-      <div class="cover__background">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay"></a>
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.
         </p>
-      </div>
+      </a>
     </section>
   </main>
   <footer class="footer">
-    <ul class="footer__items">
-      <li class="footer__item"><a href="https://yandex.ru/maps">
-        Карты</a></li>
-      <li class="footer__item"><a href="https://yandex.ru/pogoda">
-        Погода</a></li>
-      <li class="footer__item"><a href="https://rasp.yandex.ru">
-        Расписание</a></li>
-      <li class="footer__item"><a href="https://calendar.yandex.ru">
-        Календарь</a></li>
-      <li class="footer__item"><a href="https://travel.yandex.ru">
+    <nav class="footer__items">
+      <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps">
+          Карты</a></li>
+      <li class="footer__item"><a class="footer__link" href="https://yandex.ru/pogoda">
+          Погода</a></li>
+      <li class="footer__item"><a class="footer__link" href="https://rasp.yandex.ru">
+          Расписание</a></li>
+      <li class="footer__item"><a class="footer__link" href="https://calendar.yandex.ru">
+          Календарь</a></li>
+      <li class="footer__item"><a class="footer__link" href="https://travel.yandex.ru">
           Путешествия</a></li>
-    </ul>
+      </nav>
     <p class="footer__copyright">© 2023. Абраменков Сергей</p>
   </footer>
 </body>
