--- a/index.html
+++ b/index.html
@@ -41,18 +41,20 @@
       </ul>
     </section>
     <section class="photo">
-      <img class="photo__item" alt="Вид из окна поезда" src="./images/photo/train.jpg">
-      <img class="photo__item" alt="Облака" src="./images/photo/clouds.jpg">
-      <img class="photo__item" alt="Рассвет" src="./images/photo/sunrise.jpg">
-      <img class="photo__item" alt="Горный туман" src="./images/photo/mountain-fog.jpg">
-      <img class="photo__item" alt="Автомобиль на льду" src="./images/photo/wheel.jpg">
-      <img class="photo__item" alt="Пляж" src="./images/photo/beach.jpg">
-      <img class="photo__item" alt="Горы" src="./images/photo/mountain.jpg">
-      <img class="photo__item" alt="Дорожный знак" src="./images/photo/road-sign.jpg">
-      <img class="photo__item" alt="Горы" src="./images/photo/mountains.jpg">
-      <img class="photo__item" alt="Гора" src="./images/photo/mountain-2.jpg">
-      <img class="photo__item" alt="Горный пик" src="./images/photo/mountain-peak.jpg">
-      <img class="photo__item" alt="Туман" src="./images/photo/fog.jpg">
+      <div class="photo-grid">
+        <img class="photo-grid__item" alt="Вид из окна поезда" src="./images/photo/train.jpg">
+        <img class="photo-grid__item" alt="Облака" src="./images/photo/clouds.jpg">
+        <img class="photo-grid__item" alt="Рассвет" src="./images/photo/sunrise.jpg">
+        <img class="photo-grid__item" alt="Горный туман" src="./images/photo/mountain-fog.jpg">
+        <img class="photo-grid__item" alt="Автомобиль на льду" src="./images/photo/wheel.jpg">
+        <img class="photo-grid__item" alt="Пляж" src="./images/photo/beach.jpg">
+        <img class="photo-grid__item" alt="Горы" src="./images/photo/mountain.jpg">
+        <img class="photo-grid__item" alt="Дорожный знак" src="./images/photo/road-sign.jpg">
+        <img class="photo-grid__item" alt="Горы" src="./images/photo/mountains.jpg">
+        <img class="photo-grid__item" alt="Гора" src="./images/photo/mountain-2.jpg">
+        <img class="photo-grid__item" alt="Горный пик" src="./images/photo/mountain-peak.jpg">
+        <img class="photo-grid__item" alt="Туман" src="./images/photo/fog.jpg">
+      </div>
     </section>
     <section class="places">
       <div class="place">
@@ -154,18 +156,20 @@
     </section>
   </main>
   <footer class="footer">
-    <nav class="footer__items">
-      <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps">
-          Карты</a></li>
-      <li class="footer__item"><a class="footer__link" href="https://yandex.ru/pogoda">
-          Погода</a></li>
-      <li class="footer__item"><a class="footer__link" href="https://rasp.yandex.ru">
-          Расписание</a></li>
-      <li class="footer__item"><a class="footer__link" href="https://calendar.yandex.ru">
-          Календарь</a></li>
-      <li class="footer__item"><a class="footer__link" href="https://travel.yandex.ru">
-          Путешествия</a></li>
-      </nav>
+    <nav>
+      <ul class="footer__items">
+        <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps">
+            Карты</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://yandex.ru/pogoda">
+            Погода</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://rasp.yandex.ru">
+            Расписание</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://calendar.yandex.ru">
+            Календарь</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://travel.yandex.ru">
+            Путешествия</a></li>
+      </ul>
+    </nav>
     <p class="footer__copyright">© 2023. Абраменков Сергей</p>
   </footer>
 </body>
