--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="page">
   <header class="header">
-    <img class="logo" alt="логотип" src="./images/Logo/__logo.svg" width="176" height="52">
+    <img class="header__logo" alt="логотип" src="./images/Logo/__logo.svg">
     <div class="header__languages">
       <a href="#" class="header__link header__link_active">Ru</a>
       <a href="#" class="header__link">En</a>
