--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <img class="place__image" alt="Куршская коса" src="./images/places/Kurshskaya-kosa.jpg">
         <div class="place__paragraphs">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+            спокойного Куршского залива с&nbsp;одной стороны и подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
             природная зона на краю российского анклава.</p>
-          <p class="place__paragraph">На этом Калининградская область не заканчивается.<br> Для путешественника и
-            исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+          <p class="place__paragraph">На&nbsp;этом Калининградская область не заканчивается.
+            Для&nbsp;путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
             россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
             запах стального, прохладного моря.</p>
         </div>
@@ -85,11 +85,11 @@
         <div class="place__paragraphs">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
             юг —
-            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+            тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
-            Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
-            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
-            накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+            Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об&nbsp;уроках географии.
+            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от апатитов вас давно
+            накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом
             в Мурманск.</p>
         </div>
       </div>
@@ -102,12 +102,12 @@
         <img class="place__image" alt="Алтай" src="./images/places/Altaj.jpg">
         <div class="place__paragraphs">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-            озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+            В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+            озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест — горным
             воздухом.</p>
           <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
             всё
-            разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+            разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах
             пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
       </div>
@@ -121,8 +121,8 @@
         <div class="place__paragraphs">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
-          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-          скийорингу. Это такой вид спорта, когда лыжник привязывает себя<br> к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+          <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по
+          скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
       </div>
       <div class="place">
@@ -133,20 +133,20 @@
         </div>
         <img class="place__image" alt="Карелия" src="./images/places/Kareliya.jpg">
         <div class="place__paragraphs">
-          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а&nbsp;в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
             полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+            В&nbsp;девственном лесу на сотню километров не встретишь тропы. А&nbsp;на редких тропинках деревья
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
       </div>
     </section>
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-          электричках.
+        <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на
+          &nbsp;электричках.
         </p>
       </a>
     </section>
