--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="page">
   <header class="header">
-    <img class="header__logo" alt="логотип" src="./images/Logo/__logo.svg">
+    <img class="header__logo" alt="логотип" src="../russian-travel/images/logo/__logo.svg">
     <div class="header__languages">
       <a href="#" class="header__link header__link_active">Ru</a>
       <a href="#" class="header__link">En</a>
@@ -66,10 +66,12 @@
         <img class="place__image" alt="Куршская коса" src="./images/places/Kurshskaya-kosa.jpg">
         <div class="place__paragraphs">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-            спокойного Куршского залива с&nbsp;одной стороны и подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
+            спокойного Куршского залива с&nbsp;одной стороны и подёрнутого рябью волн Балтийского моря с&nbsp;другой.
+            Уникальная
             природная зона на краю российского анклава.</p>
           <p class="place__paragraph">На&nbsp;этом Калининградская область не заканчивается.
-            Для&nbsp;путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+            Для&nbsp;путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса,
+            — и немецкое наследие
             россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
             запах стального, прохладного моря.</p>
         </div>
@@ -88,7 +90,8 @@
             тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
             Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об&nbsp;уроках географии.
-            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от апатитов вас давно
+            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от апатитов вас
+            давно
             накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом
             в Мурманск.</p>
         </div>
@@ -102,8 +105,10 @@
         <img class="place__image" alt="Алтай" src="./images/places/Altaj.jpg">
         <div class="place__paragraphs">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-            В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-            озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест — горным
+            В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки
+            и
+            озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест
+            — горным
             воздухом.</p>
           <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
             всё
@@ -119,10 +124,13 @@
         </div>
         <img class="place__image" alt="Зимний Байкал" src="./images/places/Winter-Bajkal.jpg">
         <div class="place__paragraphs">
-          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это
+            самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
-          <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по
-          скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            скийорингу. Это такой&nbsp;вид&nbsp;спорта,&nbsp;когда лыжник&nbsp;привязывает себя к&nbsp;мотоциклу,
+            и&nbsp;тандем&nbsp;старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+            «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
       </div>
       <div class="place">
@@ -145,7 +153,8 @@
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
         <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на
+        <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие
+          от&nbsp;столицы&nbsp;до&nbsp;Байкала на
           &nbsp;электричках.
         </p>
       </a>
