--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="page">
   <header class="header">
-    <img class="header__logo" alt="логотип" src="../russian-travel/images/logo/__logo.svg">
+    <img class="header__logo" alt="логотип" src="./images/logo/__logo.svg">
     <div class="header__languages">
       <a href="#" class="header__link header__link_active">Ru</a>
       <a href="#" class="header__link">En</a>
@@ -40,8 +40,8 @@
         <li class="intro__item">Аэропортов <span class="intro__value">241</span></li>
       </ul>
     </section>
-    <section class="photo">
-      <div class="photo-grid">
+    <section class="photo-grid">
+      <div class="photo-grid__photos">
         <img class="photo-grid__item" alt="Вид из окна поезда" src="./images/photo/train.jpg">
         <img class="photo-grid__item" alt="Облака" src="./images/photo/clouds.jpg">
         <img class="photo-grid__item" alt="Рассвет" src="./images/photo/sunrise.jpg">
